# PivoGUI

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md
inc/: EGUI_Color.hpp  EGUI_Math.hpp  EGUI_Rectangle.hpp  EGUI_Shape.hpp  EGUI_Vector2D.hpp  EGUI_Window.hpp
inc/EGUI/: EGUI.circle.cppm  EGUI.color.cppm  EGUI.cppm  EGUI.hpp  EGUI.math.cppm  EGUI.rectangle.cppm  EGUI.shape.cppm  EGUI.vector.cppm  EGUI.widget.cppm  EGUI.window.cppm  EGUI_Audio.hpp  EGUI_AudioSys.hpp  EGUI_Button.hpp  EGUI_Circle.hpp  EGUI_Color.hpp  EGUI_Dep.hpp  EGUI_Hitbox.hpp  EGUI_Image.hpp  EGUI_InputSys.hpp  EGUI_InputSystem.hpp  EGUI_Math.hpp  EGUI_Panel.hpp  EGUI_Rectangle.hpp  EGUI_Shape.hpp  EGUI_Text.hpp  EGUI_TextureManager.hpp  EGUI_Vector.hpp  EGUI_Vector2D.hpp  EGUI_Widget.hpp  EGUI_Window.hpp
inc/PIVO/: PIVO.hpp  PIVO_Animation.hpp  PIVO_AudioSys.hpp  PIVO_Circle.hpp  PIVO_Color.hpp  PIVO_Dep.hpp  PIVO_Ellipse.hpp  PIVO_Image.hpp  PIVO_InputSys.hpp  PIVO_Line.hpp  PIVO_Math.hpp  PIVO_Panel.hpp  PIVO_Rectangle.hpp  PIVO_Text.hpp  PIVO_TextureManager.hpp  PIVO_TextureSys.hpp  PIVO_Triangle.hpp  PIVO_Vector.hpp  PIVO_Widget.hpp  PIVO_Window.hpp
inc/PIVO/Primitives/: PIVO_Vector.hpp
inc/PIVO/Shapes/: PIVO_Circle.hpp  PIVO_Ellipse.hpp  PIVO_Line.hpp  PIVO_Rectangle.hpp  PIVO_Triangle.hpp
inc/PIVO/Systems/: PIVO_AudioSys.hpp  PIVO_InputSys.hpp  PIVO_TextureSys.hpp
lib/: libSDL3_image.so.0.4.2  libSDL3_mixer.so.0  libSDL3_mixer.so.0.2.0  libSDL3_ttf.so.0.2.2
src/: EGUI_Audio.cpp  EGUI_AudioSys.cpp  EGUI_Circle.cpp  EGUI_Color.cpp  EGUI_Colors.cpp  EGUI_Dep.cpp  EGUI_Image.cpp  EGUI_InputSys.cpp  EGUI_InputSystem.cpp  EGUI_Panel.cpp  EGUI_Rectangle.cpp  EGUI_SDL.cpp  EGUI_Shape.cpp  EGUI_Text.cpp  EGUI_TextManager.cpp  EGUI_Widget.cpp  EGUI_Window.cpp  PIVO_Animation.cpp  PIVO_AudioSys.cpp  PIVO_Circle.cpp  PIVO_Color.cpp  PIVO_Dep.cpp  PIVO_Ellipse.cpp  PIVO_Image.cpp  PIVO_InputSys.cpp  PIVO_Line.cpp  PIVO_Panel.cpp  PIVO_Rectangle.cpp  PIVO_SDL.cpp  PIVO_Text.cpp  PIVO_TextManager.cpp  PIVO_TextureSys.cpp  PIVO_Triangle.cpp  PIVO_Window.cpp  main.cpp
src/Primitives/: PIVO_Color.cpp
src/Shapes/: PIVO_Circle.cpp  PIVO_Ellipse.cpp  PIVO_Line.cpp  PIVO_Rectangle.cpp  PIVO_Triangle.cpp
src/Systems/: PIVO_AudioSys.cpp  PIVO_InputSys.cpp  PIVO_TextureSys.cpp
test/: main.cpp  pong.cpp  shapes.cpp
